--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "andrius-dev-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andjag.github.io/andjag.github.io",
+  "homepage": "https://andrius.dev",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build --cname andrius.dev",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
